--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ header {
     align-items: center;
     justify-content: center;
 
-    color: white;
-    text-shadow: 0 0 10px rgba(0,0,0,0.7);
+    border: 5px solid red;
 }
+
 
 
 header h1 {
