--- a/style.css
+++ b/style.css
@@ -230,4 +230,27 @@ footer {
     background: #f4f6f9;    /* fond neutre si espace vide */
     border-radius: 12px;
 }
+/* ================= ADMIN BUTTON BAS DE PAGE ================= */
+
+.admin-access {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
+.admin-button {
+    display: inline-block;
+    background-color: #1d3557;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 6px;
+    font-size: 14px;
+    transition: all 0.25s ease;
+}
+
+.admin-button:hover {
+    background-color: #16324f;
+    transform: translateY(-2px);
+}
 
