--- a/style.css
+++ b/style.css
@@ -932,3 +932,19 @@ footer {
     box-shadow: 0 0 10px #000;
     opacity: 0.8;
 }
+/* ============================= */
+/* GALERIE RUINE */
+/* ============================= */
+
+.gallery-ruine {
+    display: flex;
+    gap: 25px;
+}
+
+.gallery-ruine img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    display: block;
+    border-radius: 14px;
+}
